--- a/portfolio/src/style/project.css
+++ b/portfolio/src/style/project.css
@@ -86,7 +86,7 @@
 .project-container{
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  max-width: 1300px; 
+  max-width: 1150px; 
   gap: 2.5rem;
   margin: 0 auto; 
 }
@@ -102,6 +102,7 @@
     height: 100%; 
     width: 100%;
     opacity: 0;
+    
 }
 
 .frame.animate-frame{
@@ -183,7 +184,7 @@
     margin-bottom:1rem;
     z-index: 1;
     color: #00BE67;
-} 
+ } 
 
 .project_link{
     display: flex;
@@ -192,7 +193,7 @@
     margin-bottom:1rem;
     z-index: 1;
 } 
-
+.project_link_2{}
 
 .detailbtn,
 .detailbtnh:after {
@@ -321,6 +322,7 @@
   box-shadow: inset 0 0 2rem  #6c0c79,
               inset 0 0 2rem  #6c0c79;
   pointer-events: none;
+ font-size: 96%;
 }
 
 .project_detail{
@@ -446,7 +448,7 @@
   font-family: Tomorrow, sans-serif;
   margin-top:5%;
   font-size: 80%;
-  width:100px;
+  width:100%;
   border-radius: 0.7rem;
   background-color: #252725;
   padding:8px;               
