--- a/portfolio/src/style/home.css
+++ b/portfolio/src/style/home.css
@@ -59,6 +59,7 @@
                0 0 0.3em  #f712c1;
   box-shadow: inset 0 0 0.6rem  #F500BD,
                     0 0 0.6rem  #F500BD;
+  z-index: 1;
 }
 
 .Download_CV::before{
