--- a/portfolio/src/style/navbar.css
+++ b/portfolio/src/style/navbar.css
@@ -208,6 +208,7 @@ nav .wholeul .remove .barlink:hover,
   width: 100%;
   height: 100%;
   z-index: 0;
+  pointer-events: none;
 }
 
 /* Apply a transition to smoothly show/hide the overlay */
@@ -222,6 +223,7 @@ nav .wholeul .remove .barlink:hover,
 
 .overlay.close{
   animation: display-background 1s forwards;
+  background: rgba(255, 255, 255, 0.2); 
   backdrop-filter: blur(10px); 
   pointer-events: none; 
   transition: opacity 500ms ease-in-out 500ms;
@@ -230,9 +232,6 @@ nav .wholeul .remove .barlink:hover,
 @keyframes blur-background {
   0%{
     opacity: 0;
-  }
-  50%{
-    opacity: 1;
   }
   100%{
     opacity: 1;
@@ -245,7 +244,6 @@ nav .wholeul .remove .barlink:hover,
   }
   100%{
     opacity: 0;
-    display: none; 
   }
 }
 /* mobile navbar */
