--- a/portfolio/src/style/experience.css
+++ b/portfolio/src/style/experience.css
@@ -45,12 +45,11 @@
 /* you forgot to set the width and height that's why the backgroud width will increase */
 .experience_container .experienceIcon{
     position: absolute;
-    font-family: Tomorrow, sans-serif;
     font-size: 2rem;
     top:30px;
     width: 40px;
     height: 43px;
-    z-index: 10;
+    z-index: 2;
     background-color: #f500bd;
     padding: 4px;
     border-radius: 50%;
@@ -116,7 +115,7 @@
   
   .timeline-container.animate-timeline::after {
     animation: timelineMove 1s forwards; 
-    transition: ease-in;
+    transition: ease-in 2s;
   }
   
   @keyframes timelineMove {
@@ -172,7 +171,7 @@
    font-family: Tomorrow, sans-serif;
    overflow: hidden;
    max-height: 0;
-   transition: max-height 1s;
+   transition: max-height 1.7s;
 }
 
 .experience_container.right_position.animate-container {
@@ -256,6 +255,7 @@
 /* Trigger closing animation when a new button is clicked */
 .moreInfoVisible[closing] {
   animation: close-contribution 1s forwards;
+ 
 }
 
 /* show contribution animation */
@@ -300,8 +300,9 @@
 .experience-contribution[closing]{
   display: block;
   pointer-events: none;
-  animation: close-contribution 0.5s forwards;
+  animation: close-contribution 1s forwards;
   transition: ease-out 250ms;
+  transition: max-height 0.8s;
 }
 
 ul{
