--- a/portfolio/src/style/index.css
+++ b/portfolio/src/style/index.css
@@ -34,17 +34,21 @@ section{
 }
 
 .red-title{
+    position: relative;
     font-family: Tomorrow, sans-serif;
     color: #F500BD;
     text-align: center;
     font-size: 200%;
+    bottom:15px;
 }
 
 .green-title{
+    position: relative;
     font-family: Tomorrow, sans-serif;
     color:#00BE67;
     text-align: center;
     font-size: 200%;
+    bottom:15px;
 }
 
 
