--- a/portfolio/src/style/project.css
+++ b/portfolio/src/style/project.css
@@ -1,5 +1,9 @@
 
-
+#Project{
+  margin-top: 3vh;
+  margin-bottom: 10vh;
+  padding-top: 5px;
+}
 @media  screen and (max-width:1280px) {
   .project_tool_group{
     padding-left:8%;
@@ -265,6 +269,7 @@
     margin-bottom:1rem;
     z-index: 1;
 } 
+
 .project_link_2{
   display: flex;
   position: absolute;
