copyright text add on the footer

--- a/portfolio/src/style/index.css
+++ b/portfolio/src/style/index.css
@@ -58,6 +58,7 @@ section{
         align-items: center;
     }
     .main_content{
+        position: relative;
         justify-content: center;
         margin-right: 6%;
         margin-left: 6%;
