--- a/portfolio/src/style/footer.css
+++ b/portfolio/src/style/footer.css
@@ -2,6 +2,7 @@
     position: relative;
     background: #00BE67; 
     border-radius: 1.5rem;
+    display: block;
 }
 .footer-wrapper{
     padding:3.5rem;
@@ -38,5 +39,48 @@
 
 .contact-icon.github:hover{
   color:#000;
+}
 
+.copyRight{
+    position: absolute;
+    font-family: Tomorrow, sans-serif;
+    text-align: center;
+    font-size: 60%;
+    right:50px;
+    left:50px;
+    color:#6c0c79;
+    bottom:25px;
+}
+
+.copyRight-icon{
+    position: relative;
+    top:0.1rem;
+}
+
+@media screen and (max-width:480px){
+    .copyRight{
+        font-size: 50%;
+    }
+}
+
+@media screen and (max-width:340px){
+    .footer-wrapper{
+        padding:3rem;
+    }
+
+    .footer-title{
+        position: relative;
+        bottom:40px;
+    }
+    .socialmedia-link{
+        gap: 1rem;
+        bottom:60px;
+    }
+
+    .copyRight{
+        bottom:35px;
+    }
+    .copyRight-icon{
+        top:0.5px;
+    }
 }
